# mattermost-cli

./: Cargo.toml
src/: main.rs
